--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -12,7 +12,7 @@ services:
     volumes:
       - pg_data:/var/lib/postgresql/data
   backend:
-    build: ./backend/
+    image: nat5/kittygram_backend
     env_file: .env
     volumes:
       - static:/backend_static
@@ -21,12 +21,12 @@ services:
       - db
   frontend:
     env_file: .env
-    build: ./frontend/
+    image: nat5/kittygram_frontend
     command: cp -r /app/build/. /frontend_static/
     volumes:
       - static:/frontend_static
   gateway:
-    build: ./nginx/
+    image: nat5/kittygram_gateway
     ports:
       - 9000:80
     volumes:
