--- a/ .github/workflows/main.yml
+++ b/ .github/workflows/main.yml
@@ -78,6 +78,7 @@ jobs:
         cd frontend/
         npm run test
   build_frontend_and_push_to_docker_hub:
+  # фронт
     name: Push frontend Docker image to DockerHub
     runs-on: ubuntu-latest
     needs: frontend_tests
