--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,11 +1,11 @@
 name: Main Kittygram workflow
 on:
   push:
-    branches:
-      - main
 
 jobs:
+
   tests:
+
     runs-on: ubuntu-latest
     services:
       postgres:
@@ -40,7 +40,10 @@ jobs:
         python -m flake8 backend/
         cd backend/
         python manage.py test
+
+  if: github.ref_name == 'main'
   build_and_push_to_docker_hub:
+
     name: Push Docker image to DockerHub
     runs-on: ubuntu-latest
     needs: tests
@@ -59,8 +62,10 @@ jobs:
         with:
           context: ./backend/
           push: true
-          tags: nat5/kittygram_backend:latest
+          tags: ${{ secrets.DOCKER_USERNAME }}/kittygram_backend:latest
+
   frontend_tests:
+
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
@@ -76,7 +81,10 @@ jobs:
       run: |
         cd frontend/
         npm run test
+
+  if: github.ref_name == 'main'
   build_frontend_and_push_to_docker_hub:
+
     name: Push frontend Docker image to DockerHub
     runs-on: ubuntu-latest
     needs: frontend_tests
@@ -95,8 +103,11 @@ jobs:
         with:
           context: ./frontend/
           push: true
-          tags: nat5/kittygram_frontend:latest
+          tags: ${{ secrets.DOCKER_USERNAME }}/kittygram_frontend:latest
+
+  if: github.ref_name == 'main'
   build_gateway_and_push_to_docker_hub:
+
     name: Push gateway Docker image to DockerHub
     runs-on: ubuntu-latest
     steps:
@@ -114,8 +125,11 @@ jobs:
         with:
           context: ./nginx/
           push: true
-          tags: nat5/kittygram_gateway:latest
+          tags: ${{ secrets.DOCKER_USERNAME }}/kittygram_gateway:latest
+
+  if: github.ref_name == 'main'
   deploy:
+
     runs-on: ubuntu-latest
     needs:
       - build_and_push_to_docker_hub
@@ -148,7 +162,10 @@ jobs:
           sudo docker compose -f docker-compose.production.yml exec backend python manage.py migrate
           sudo docker compose -f docker-compose.production.yml exec backend python manage.py collectstatic
           sudo docker compose -f docker-compose.production.yml exec backend cp -r /app/collected_static/. /backend_static/static/
+
+  if: github.ref_name == 'main'
   send_message:
+
     runs-on: ubuntu-latest
     needs: deploy
     steps:
@@ -157,4 +174,8 @@ jobs:
       with:
         to: ${{ secrets.TELEGRAM_TO }}
         token: ${{ secrets.TELEGRAM_TOKEN }}
-        message: Деплой kittygram успешно выполнен!
+        message: |
+        Деплой kittygram успешно выполнен!
+        Коммит "${{ github.event.commits[0].message }}"
+        запушен ${{ github.actor }},
+        ссылка на коммит https://github.com/${{ github.repository }}/commit/${{github.sha}}
